Navbar Alignments Fixed

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -131,6 +131,7 @@
 
     .home {
         height: 100%;
+        padding-top: 30px;
     }
 }
 
